# base64-bytes

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: audit.yml  build.yml  build_nix.yml  cargo-publish.yml  docs.yml  lint.yml  test.yml
base64_bytes/: all.html  fn.deserialize.html  fn.serialize.html  index.html  macro.base64_bytes!.html  macro.base64_bytes.html  sidebar-items.js  struct.Base64Bytes.html
src/: lib.rs
src/base64_bytes/: lib.rs.html
trait.impl/ark_serialize/: trait.CanonicalDeserialize.js  trait.CanonicalSerialize.js  trait.Valid.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/iter/traits/collect/: trait.Extend.js  trait.FromIterator.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
