[package]
name = "base64-bytes"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Binary blobs with intelligent serialization"
license = "MIT"
edition = "2021"

[dependencies]
ark-serialize = { version = "0.4", features = ["derive"] }
base64 = "0.22"
derive_more = "0.99"
serde = "1.0"

[dev-dependencies]
bincode = "1.3"
rand = "0.8"
serde_json = "1.0"
