[package]
name = "base64-bytes"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
description = "Binary blobs with intelligent serialization"
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.22"
serde = "1.0"

[dev-dependencies]
bincode = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
